# zcblive-geode

./: ANDROID_PORT.md  README.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bindings.cpp
android/app/src/main/java/com/zcblive/: FridaHook.kt  MainActivity.kt  ZCBLiveJNI.kt
